--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=UnifrakturCook&display=swap');
+@font-face {
+  font-family: 'Cloister Black';
+  src: url('./assets/fonts/CloisterBlack.ttf') format('truetype'); /* Ruta al archivo de la fuente */
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Horst Blackletter Demo';
+  src: url('./assets/fonts/HorstBlackletterDemo.ttf') format('truetype'); /* Ruta al archivo de la fuente */
+  font-weight: bold;
+  font-style: normal;
+}
+
 .App {
   text-align: center;
 }
@@ -7,10 +22,11 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/*@media (prefers-reduced-motion: no-preference) {
   .App-logo {
+    animation: App-logo-spin infinite 20s linear;
   }
-}
+}*/
 
 .App-header {
   background-color: #111111;
@@ -19,8 +35,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: calc(5px + 3vmin);
   color: white;
+  font-family: 'Horst Blackletter Demo', serif;
 }
 
 .App-link {
